# SmartTV

./: README.md  tv-remote-cli.cabal
src/: Config.hs  Discovery.hs  Main.hs  Types.hs
src/Drivers/: AndroidTV.hs  Tizen.hs  WebOS.hs
