--------------------------------------------------------------------------------
-- Project      : Smart TV Remote CLI
-- Author       : Mr.Rm19
-- GitHub       : https://github.com/Rm19x
-- Description  : 100% Real Functional Smart TV Remote for Android TV/Tizen/WebOS
-- Copyright    : (c) 2026 Mr.Rm19. All rights reserved.
--------------------------------------------------------------------------------

cabal-version:       2.4
name:                tv-remote-cli
version:             0.1.0.0
summary:             A 100% real CLI remote control tool for Android TV, Tizen, and WebOS.
description:         A functional Haskell-based command line utility designed by Mr.Rm19 
                     to discover, pair, and control Smart TVs over a local Wi-Fi network.
homepage:            https://github.com/Rm19x/SmartTV
bug-reports:         https://github.com/Rm19x/SmartTV/issues
license:             MIT
author:              Mr.Rm19
maintainer:          https://github.com/Rm19x
copyright:           (c) 2026 Mr.Rm19. All rights reserved.
category:            Network, IoT, Hardware Control
extra-source-files:  README.md

executable tv-remote
  main-is:             Main.hs
  other-modules:       Discovery
                       Config
                       Types
                       Drivers.AndroidTV
                       Drivers.Tizen
                       Drivers.WebOS
  
  build-depends:       base >= 4.14 && < 5,
                       optparse-applicative >= 0.16 && < 0.19,
                       network >= 3.1 && < 3.3,
                       websockets >= 0.12 && < 0.14,
                       wuss >= 1.1 && < 2.1,
                       tls >= 1.5 && < 2.2,
                       aeson >= 2.0 && < 2.3,
                       bytestring >= 0.10 && < 0.13,
                       directory >= 1.3 && < 1.4,
                       filepath >= 1.4 && < 1.5,
                       text >= 1.2 && < 2.2,
                       vty >= 5.30 && < 6.0,
                       async >= 2.2 && < 2.6,
                       time >= 1.9 && < 1.13

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall 
                       -threaded 
                       -rtsopts 
                       "-with-rtsopts=-N"
